--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-		<script src='./index.js' defer></script>
 	</head>
 	<body>
-		<div id='main'>	
-			{{questions}}
-			<div id='header'>
-				<div id='score'></div>
-			</div>		
-			<div id='body'>
-				<div id='question-main'>
-					<div id='question-header'></div>	
-					<div id='question-body'></div>	
-				</div>	
-			</div>	<!-- end body-->	
+		<div id='trivia'>
+			<question-main v-for="question in questions" v-bind:question="question"></question-main>
 		</div>	<!-- end main-->
+		<script src='./index.js'></script>
 	</body>
 </html>	
